--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="buttons-container">
             <button class="action-btn" data-link="https://telegram.me/+9i7pG6DBjv5lZmVl">
                 <span class="btn-text">
-                    <span class="btn-text-line1">Join group and copy my trades</span>
+                    <span class="btn-text-line1">Join group and start trading</span>
                     <span class="btn-text-line2">LIFETIME FREE</span>
                 </span>
                 <svg class="btn-menu-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
