Update Telegram link to NADEEM TRADES channel

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 Join Nadeem Trades & Get Accurate Trading Signals Daily 💸 100% Strategy Based 📈 JOIN NOW!
             </div>
             
-            <a href="https://telegram.me/+1FhZ-cZRh_E0MGJl" class="telegram-button" target="_blank">
+            <a href="https://telegram.me/+npwp3WT42JA2NzE1" class="telegram-button" target="_blank">
                 JOIN TELEGRAM NOW
             </a>
         </div>
